# MetrixNet

./: CMakeLists.txt  LICENSE  README.md  activations.c  activations.h  array.c  array.h  convolutional_layer.c  convolutional_layer.h  data.c  data.h  layer.c  layer.h  loss.c  loss.h  main.c  matrix.c  matrix.h  pool.c  pool.h  rnn_layer.c  rnn_layer.h  test.c  test.h  utils.c  utils.h
